zi_minmax + test

--- a/multiview.ipynb
+++ b/multiview.ipynb
@@ -175,20 +175,6 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -713,6 +699,53 @@
    "outputs": [],
    "source": [
     "merged = minmax_res.merge(liana_res, how='inner', on=['ligand_complex', 'receptor_complex', 'source', 'target'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PearsonRResult(statistic=0.9526472590237266, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pearsonr(merged['cellphone_pvals'], merged['cellphone_pvals_minmax'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PearsonRResult(statistic=0.9617604564570956, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pearsonr(merged['lr_means'], merged['lr_minmax'])"
    ]
   },
   {
